--- a/client/src/components/auth/UserRegistration/UserRegistration.module.css
+++ b/client/src/components/auth/UserRegistration/UserRegistration.module.css
@@ -26,7 +26,3 @@
 .checkbox:focus {
   outline: none;
 }
-
-.errorMessage {
-  color: var(--color-error);
-}
